# gazebo_timepix3

./: .gitignore  CMakeLists.txt  README.md  obstacle.h  package.xml
compton_data/: 0.elist  1.elist  10.elist  100.elist  101.elist  102.elist  103.elist  104.elist  105.elist  106.elist  107.elist  108.elist  109.elist  11.elist  110.elist  111.elist  112.elist  113.elist  114.elist  115.elist  116.elist  117.elist  118.elist  119.elist  12.elist  120.elist  121.elist  122.elist  123.elist  124.elist  125.elist  126.elist  127.elist  128.elist  129.elist  13.elist  130.elist  131.elist  132.elist  133.elist  (+141 more)
gazebo_models/gazebo_timepix/: model.config  model.sdf
gazebo_models/single_timepix/: model.config  model.sdf
include/: common.h  geometry_utils.h  materials.h  radiation_constants.h  radiation_utils.h  rviz_visualizer.h
include/gazebo_timepix/: data_utils.h  gazebo_timepix.h  geometry_utils.h  obstacle.h  obstacle_abstraction.h  python_wrappers.h  source.h  source_abstraction.h  visual_utils.h
include/gazebo_timepix3/: obstacle_abstraction.h  source_abstraction.h
launch/: rviz.launch  test.launch
models/gazebo_timepix3/: model.config  model.sdf
nist/: air.csv  c.csv  cd.csv  cdte.csv  concrete.csv  fe.csv  glass.csv  h.csv  n.csv  o.csv  pb.csv  polystyrene.csv  pvc.csv  si.csv  water.csv  wood.csv
rviz/: visualizer.rviz
scripts/: material_properties.py
src/: data_utils.cpp  dummy_test.cpp  gazebo_timepix.cpp  gazebo_timepix3.cpp  geometry_utils.cpp  materials.cpp  obstacle_abstraction.cpp  python_wrappers.cpp  radiation_utils.cpp  rviz_visualizer.cpp  source_abstaction.cpp  timepix.cpp  visual_utils.cpp
