<?xml version="1.0"?>
<package format="2">
  <name>gazebo_timepix</name>
  <version>0.0.0</version>
  <description>Timepix simulation for Gazebo</description>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>sitl_gazebo</depend>
  <depend>protobuf-dev</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_rad_msgs</depend>
  <depend>geometry_visual_utils</depend>
  <depend>message_runtime</depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>

</package>
