<?xml version="1.0"?>
<package format="2">

  <name>gazebo_timepix</name>
  <version>2.0.0</version>
  <description>This package contains implementation of Timepix detector simulator plugin for Gazebo.
    It allows the user to simulate readouts induced by radiation sources (use plugin gazebo_rad_source).
  </description>

  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>
  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>mrs_lib</build_depend> -->

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>radiation_utils</depend>
  <depend>gazebo_rad_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>

  <export>
  </export>
</package>
