<?xml version="1.0"?>
<package format="2">

  <name>gazebo_timepix</name>
  <version>2.0.0</version>
  <description>This package contains implementation of Timepix detector simulator plugin for Gazebo.
    It allows the user to simulate readouts induced by radiation sources (use plugin gazebo_rad_source).
  </description>

  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>
  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>sitl_gazebo</depend>
  <depend>protobuf-dev</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_rad_msgs</depend>
  <depend>geometry_visual_utils</depend>
  <depend>message_runtime</depend>
  <depend>rad_utils</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>

  <export>
  </export>
</package>
